@@ -1,0 +1,11 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>&nbsp;</title> <!-- Localized title will be filled in by JavaScript. -->
+    <script type="text/javascript" src="MERGEJS_OUTPUT_FILE"></script>
+    <script type="text/javascript" src="GRUNT_OUTPUT_FILE"></script>
+</head>
+<body>
+</body>
+</html>
