@@ -1,3 +1,5 @@
+7/26/13 create deployed html file based on sim.html template
+7/26/13 #12, add minification of scripts that are preloaded before primary script
 6/14/13 add clean-strings.sh, for identifying missing and extra keys in translated string files
 5/31/13 Removing es5 JSHint flag for upgrade to JSHint 2 (requirejs-contrib-jshint 0.5.4+)
 5/31/13 Externalized grunt/jshint-options.js, for use in other libraries
